--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/tic-tac-toe.svg"/>
-    <meta name=" viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="./tic-tac-toe.svg" />
+  <meta name=" viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tic Tac Toe Game using React JS</title>
 </head>
 
